# lacoctelera_backend

./: .dockerignore  .env  .gitignore  .licensesnip  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Containerfile  Dockerfile  README.md
.sqlx/: query-00a866a53870c62ddaf0b4ec7933f6b82d37501659acf1bc11a0899d0551ff3c.json  query-02fcf0504a9a53760c7f6d476d3405a25e98759d10e0bfc9f0bfe4745433bf9c.json  query-08d08afb1b96a3c0f98e266971633b9a196a80601e50f6139c22275e718113a3.json  query-0fba28428fb37befa297ec2f31bb8d3b4214c9386a89ee083d34a2dadc042535.json  query-103da8a83ca11806b2d7b9771f17927376630c8a05caff0db9787efd1a7b3dee.json  query-13d5a37a9de23987ec548aab653e0616b2f0201762c692c7af936c2964d2eb42.json  query-140e43eeb3e01dbf20576d53f58530ddd34f7ae7ca9b1a4d606e6283513d1432.json  query-171a1df6ebfd43f03efd43f3517632cb5f8b17a8320a9b05a7755472a2b6c1d0.json  query-1864f548c434cba2005c72f19c3554e0c3e820eeb4f39355092290b6369b9ccf.json  query-1f556fb7ceaa95bde4ce1ee96d1f34cfe833100f9fe5e0c1e55424f6e96f8d40.json  query-2bec72607e1e78eb7728d0938ad92488b95681245ce76c1cd1bb93f066c60a6c.json  query-303c926581a8a7f262a6d61659972ebd4c70d41b5d6f58558f0b63e1a3f6935c.json  query-3d3cdb43db35c1b15535502488b26a3e046f7a7cb326f5448fa4fdfc3638bb77.json  query-3fa47ac36844602644a2f3b899c19da5659f27ebdb724db6cc3f220f08675c36.json  query-3ff3dbfcf6959c502cd1f944c711e084edfbc0083d2b7dfe939b999dc4008951.json  query-45abd973f78149df64fb0221d0cbed032f69402fc39ae0fda8bdd9e8f7452292.json  query-54e84406556c097330d4ecbc5c36bcfbc45bd68cdff42077b8d157f6e8f4c395.json  query-57fe43a21efa22bbc1caebec00ff8515d77d44b8eddcd6d526e0745978cd8fe1.json  query-6e6ec8eba1667a33d46beb923d70f81eacdb45a42828a8969bb6e35ebfd2a01d.json  query-8264d83c13995813352d2449a13f42a52a4f579441eb35cfaaac6a85f0748f4f.json  query-844fa1480829ee505d9b6fa95e3cdc5d52fcf1b05043ad83baa5d85af9aa9a08.json  query-98dff5bbe83dc0fbd3fa1b45d4679e4896d4d2601263da884a485f91e0eba8d9.json  query-9a78e600129fd9b0af7deeebe6bc6c96e09203c66e5da456bc5f66fdefbc8c44.json  query-a074fc0fb835873f2810a982caeefee675599196b3abe6e516313bfe8f6edf91.json  query-a18adbb3e4895361b0e913e09a914b3a323efa65fd42c00eed4664b9f854eb80.json  query-a91f49a198f2b895ec1a6ea8a020a537454bc04edcb1546fc20467f60176bf17.json  query-b106d6443c2b09eecc54da700d8ce77cb7b85f5ed46cb8bf5c7419a8cfb1c29b.json  query-b2b1342e72bcde4bf3fe408b827883273c80eac1be50e99b2fd1aa324b0bde61.json  query-d1f1943da7866b9c84f8b007aeef920b9fa95b5d94e59bca92a3f0e015c873b7.json  query-d2f17c65873426ff2aff0b7fa026d390c88f4b2138461e84b185b403b9fef560.json  query-de44a8fa87168078e0685d0a6b0bd0c480ff54e3d23b7b9872f0f8f391bbc18a.json  query-e64c2e3cc2def6bdffeab47b2eb16623576a67e05b28a3075c272b300e3d9026.json  query-fbad4fc064297665f83d1a405084b3d10126f5e71f6b59b6b98950828918e7d5.json  query-fe66ecbc7e9d0692a0c04f0ca9e72e79b4463ade63797a9e63c224221e68b09c.json
config/: base.toml  devel.toml  prod.toml
migrations/: 20240729075515_create_initial_schema.sql  20241017100845_token_request_schema.sql  20241029075545_author_schema.sql  (+1 more)
(+66 files in other folders)
