[package]
name = "lacoctelera"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["clock", "serde"] }
config = { version = "0.14.0", features = ["toml", "serde_json"], default-features = false }
names = "0.14.0"
once_cell = "1.19.0"
regex = "1.10.5"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
serde-aux = "4.5.0"
serde_derive = "1.0.204"
serde_json = "1.0.122"
serde_urlencoded = "0.7"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "mysql", "chrono", "migrate"] }
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-actix-web = "0.7.11"
tracing-subscriber = { version = "0.3.18", features = ["std"] }
utoipa = { version = "4.2.3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "5.0.0", features = ["actix-web"] }
uuid = { version = "1.10.0", features = ["v7", "serde", "std"] }
validator = { version = "0.16", features = ["derive"] }

[dev-dependencies]
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls", "json"] }
rstest = { version = "0.21.0", default-features = false}
pretty_assertions = "1.4.0"
